src/test/resources/sdp/examples/should-pass/minimal-bad-lines/minimal.sdp
v=0
o=
o
this is rubbish
o=- 123 0 IN IP4 streaming.awesome.com
what is this doing here
s=my session
