src/test/resources/sdp/examples/should-fail/mandatory-missing/no-sessionname/minimal.sdp
v=0
o=- 123 0 IN IP4 streaming.awesome.com
